--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+nav{
+    display: flex;
+    justify-content: space-around;
+    background-color: #99CCB8;
+    padding: 10px;
+}
 h1{
-    color: orange
+    flex-wrap:space-around;
+}
+body{
+    background-color: #99CCB8;
 }
